<resources>
    <string name="app_name">TalkStage app</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="action_login">Log in</string>
    <string name="action_logout">Log Out</string>
    <string name="action_search">search</string>
    <string name="action_map">map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_talks">Talks</string>
    <string name="title_speakers">Speakers</string>
    <string name="title_my_profile">My Profile</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="title_activity_talk_details">TalkDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>


</resources>
