<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.talks1.MyListActivity">

    <item
        android:id="@+id/action_search_item"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_search_white_24"/>
    <item
        android:id="@+id/action_map_item"
        android:orderInCategory="100"
        android:title="@string/action_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/baseline_near_me_white_24"/>

    <item
        android:id="@+id/action_settings_item"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/baseline_settings_applications_white_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_item"
        android:orderInCategory="100"
        android:title="@string/action_about"
        android:icon="@drawable/baseline_info_white_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_feedback_item"
        android:orderInCategory="100"
        android:title="@string/action_feedback"
        android:icon="@drawable/baseline_feedback_white_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login_item"
        android:orderInCategory="100"
        android:title="@string/action_login"
        android:icon="@drawable/baseline_account_circle_white_24"
        app:showAsAction="never"/>

</menu>
